# EVM

./: CMakeLists.txt  alu.c  alu.h  cpu.c  cpu.h  draw_interface.c  draw_interface.h  handler.c  handler.h  main.c  signal.c  signal.h
MyBigChars/include/: MyBigChars.h
MyReadKey/include/: MyReadKey.h
MyReadKey/src/: MyReadKey.c
MySimpleComputer/include/: MySimpleComputer.h
MySimpleComputer/src/: MySimpleComputer.c
MyTerm/: CMakeLists.txt
MyTerm/include/: MyTerm.h
MyTerm/src/: MyTerm.c
